--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <title>Todo List</title>
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 
 <div id="container">
   <h1>To-Do List</h1>
-  <input type="text">
+  <input type="text" placeholder="Add New to do">
 
   <ul>
     <li><span>X </span> Go to Potions Class</li>
