--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <title>Todo List</title>
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
     <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script>
 </head>
 <body>
 
 <div id="container">
-  <h1>To-Do List</h1>
+  <h1>To-Do List <i class="fa fa-plus"></i></h1>
   <input type="text" placeholder="Add New to do">
 
   <ul>
-    <li><span>X </span> Go to Potions Class</li>
-    <li><span>X </span>Buy New Robes</li>
-    <li><span>X </span>Visit Hagrid</li>
+    <li><span><i class="fa fa-trash"></i></span> Go to Potions Class</li>
+    <li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
+    <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
   </ul>
 </div>
 
