--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>Todo List</title>
     <link rel="stylesheet" type="text/css" href="assets/css/todos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css">
-    <script type="text/javascript" src="assets/js/lib/jquery-2.1.4.min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+    <script type="text/javascript" src="assets/js/lib/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 
 <div id="container">
   <h1>To-Do List <i class="fa fa-plus"></i></h1>
-  <input type="text" placeholder="Add New to do">
+  <input type="text" placeholder="Add New to do" maxlength="40">
 
   <ul>
     <li><span><i class="fa fa-trash"></i></span> Go to Potions Class</li>
@@ -20,7 +20,6 @@
     <li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
   </ul>
 </div>
-
 
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
